#20 Fix nav-list alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -85,6 +85,7 @@ body {
 }
 .nav-list {
   list-style-type: none;
+  align-items: center;
 }
 .nav-item {
   padding-right: 41px;
